Fix hero gap

--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,7 @@ body {
     background-color:#1F2937;
     display: flex;
     padding: 7% 15%;
+    gap: 5%;
 }
 
 .hero .main-text {
